--- a/wordcloud-front/package.json
+++ b/wordcloud-front/package.json
@@ -8,7 +8,12 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "@material-ui/core": "^4.5.0",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.32",
+    "@material-ui/styles": "^4.5.0",
+    "react-router-dom": "5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
