--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "proxy": "https://localhost:8000",
   "browserslist": {
     "production": [
       ">0.2%",
