--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,13 +1,15 @@
 FROM node:latest
 run npm install -g serve
 ENV NPM_CONFIG_PREFIX=/home/node/.npm-global
-.
+
 
 RUN mkdir -p  /usr/src/app
 WORKDIR /usr/src/app
-COPY package.json /usr/src/app
+COPY . /usr/src/app
 
+RUN npm install
 
+ADD node_modules /usr/src/app/node_modules
 ADD public /usr/src/app/public
 
 RUN npm run build
