--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -7,7 +7,7 @@ RUN mkdir -p  /usr/src/app
 WORKDIR /usr/src/app
 COPY . /usr/src/app
 
-RUN npm install
+RUN npm install --silent
 
 ADD node_modules /usr/src/app/node_modules
 ADD public /usr/src/app/public
