--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 version: '3.3'
 
 services:
-  dev:
-    build:
-      context: .
-    ports:
-      - '3000:3000'
-    stdin_open: true
-
   prod:
     build:
       context: .
-      dockerfile: Dockerfile.prod
     ports:
       - '5000:5000'
+    stdin_open: true
+
+  dev:
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    ports:
+      - '3000:3000'
     stdin_open: true
