--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,5 +1,5 @@
 FROM node:latest
-RUN npm install -g serve
+
 ENV NPM_CONFIG_PREFIX=/home/node/.npm-global
 
 
@@ -7,7 +7,7 @@ RUN mkdir -p  /usr/src/app
 WORKDIR /usr/src/app
 COPY . /usr/src/app
 
-RUN npm install --silent
-RUN npm run build
+RUN npm install
 
-CMD ["serve","-s", "build"]
+
+CMD ["npm", "start"]
